--- a/.well-known/stellar.toml
+++ b/.well-known/stellar.toml
@@ -25,3 +25,4 @@ anchor_asset="GBP"
 redemption_instructions="Redeemable through the GBPC/USDC trading pair on the SDEX"
 name="GBP Coin"
 desc="GBPC is a GBP backed stablecoin on the Stellar network. It is redeemable through the SDEX on the GBPC/USDC market pair"
+image="https://i.imgur.com/vX2TTYX.png"
