--- a/.well-known/.htaccess
+++ b/.well-known/.htaccess
@@ -1,5 +1,4 @@
-<IfModule mod_rewrite.c>
-  <FilesMatch "^stellar\.toml$">
-    AddType text/plain .toml
-  </FilesMatch>
+<IfModule mod_headers.c>
+
+Header set Access-Control-Allow-Origin *
 </IfModule>
