--- a/.well-known/stellar.toml
+++ b/.well-known/stellar.toml
@@ -1,3 +1,5 @@
+# StellarAnchorUK <stellaranchoruk.xyz>
+VERSION="2.2.0"
 NETWORK_PASSPHRASE="Public Global Stellar Network ; September 2015"
 ACCOUNTS=[
 "GDXF6SYWIQOKOZ7BACXHBFBLQZEIH25KOTTLWQK35GO3JKRNIFHHGBPC",
