--- a/.well-known/stellar.toml
+++ b/.well-known/stellar.toml
@@ -42,4 +42,4 @@ anchor_asset="KRW"
 redemption_instructions="Redeemable through the KRW/yUSDC trading pair on the SDEX."
 name="KRW Coin"
 desc="KRW is a mirror representation of the South Korean Won on the Stellar network. Using the Stellar DEX we keep KRWC pegged to the same value as the current market rates of real world KRW & USD. KRWC allows users of Stellar to hold a representation on the South Korean Won within the ecosystem. Each token is backed by a USD reserve, which is verifiable by viewing our distribution wallet on the network. We ensure to always have enough USD in reserve to buy back all issued KRWC through the SDEX. A minimum spread of 1% is set by the distribution wallet on buy & sell offers, with offers updated regularly to reflect other market prices. Visit us at https://stellaranchor.uk"
-image="https://stellaranchoruk.xyz/images/tokens/KRWC.png"
+image="https://stellaranchoruk.xyz/images/tokens/KRWC2.png"
