--- a/.well-known/stellar.toml
+++ b/.well-known/stellar.toml
@@ -5,7 +5,9 @@ ACCOUNTS=[
 "GDXF6SYWIQOKOZ7BACXHBFBLQZEIH25KOTTLWQK35GO3JKRNIFHHGBPC",
 "GDGEWZMIJ2K6AEYYV2L4FYN27YJP5OVZSWCJIM662D5OS7EL6T6WBGBP",
 "GA4JBPWVFUT2FETDSMSGBYDGH4FROYB5SYKLVQO7WGNZHCSB63OIKRWC",
-"GC7QJZNPG7FZT2C4QV7V2NJ7EGNMC4KYS2IZUSO3ZPBUNKSUMLSJZKRW"]
+"GC7QJZNPG7FZT2C4QV7V2NJ7EGNMC4KYS2IZUSO3ZPBUNKSUMLSJZKRW",
+"GAP2JFYUBSSY65FIFUN3NTUKP6MQQ52QETQEBDM25PFMQE2EEN2EEURC",
+"GCV5FAHGGXBDOUKST2GLBZMIGGEJSM4LAQKBGF2Z33W3DYWFGQAR6EUR"]
 
 [DOCUMENTATION]
 ORG_NAME="Stellar Anchor UK"
@@ -14,7 +16,7 @@ ORG_URL="https://stellaranchor.uk"
 ORG_LOGO="https://i.imgur.com/vX2TTYX.png"
 ORG_OFFICIAL_EMAIL="gbpcstellar@gmail.com"
 ORG_TWITTER="https://twitter.com/StellarAnchorUK"
-ORG_DESCRIPTION="Stellar Anchor UK mirrors real world assets on the Stellar network. We currently provide the pegged stablecoin GBPC, allowing users of Stellar to hold a representation on the Great British Pound within the ecosystem. Currently, holders of GBPC can exchange their tokens back to USDC & yUSDC through the Stellar DEX."
+ORG_DESCRIPTION="Stellar Anchor UK mirrors real world assets on the Stellar network. We currently provide the pegged stablecoins GBPC, KRWC, and EURC, allowing users of Stellar to hold a representation of the Great British Pound, South Korean Won, and the Euro within the ecosystem. Currently, holders of GBPC, KRWC, and EURC can exchange their tokens back to USDC & yUSDC through the Stellar DEX."
 [[PRINCIPALS]]
 email="gbpcstellar@gmail.com"
 
@@ -28,7 +30,7 @@ anchor_asset_type="fiat"
 anchor_asset="GBP"
 redemption_instructions="Redeemable through the GBPC/USDC trading pair on the SDEX."
 name="GBP Coin"
-desc="GBPC is a mirror representation of the Great British Pound on the Stellar network. Using the Stellar DEX we keep GBPC pegged to the same value as the current market rates of real world GBP & USD. GBPC allows users of Stellar to hold a representation on the Great British Pound within the ecosystem. Each token is backed by a USD reserve, which is verifiable by viewing our distribution wallet on the network. We ensure to always have enough USD in reserve to buy back all issued GBPC through the SDEX. A minimum spread of 1% is set by the distribution wallet on buy & sell offers, with offers updated regularly to reflect other market prices. Visit us at https://stellaranchor.uk"
+desc="GBPC is a mirror representation of the Great British Pound on the Stellar network. Using the Stellar DEX, we keep GBPC pegged to the same value as the current market rates of real world GBP & USD. GBPC allows users of Stellar to hold a representation on the Great British Pound within the ecosystem. Each token is backed by a USD reserve, which is verifiable by viewing our distribution wallet on the network. We ensure to always have enough USD in reserve to buy back all issued GBPC through the SDEX. A minimum spread of 1% is set by the distribution wallet on buy & sell offers, with offers updated regularly to reflect other market prices. Visit us at https://stellaranchor.uk"
 image="https://i.imgur.com/vX2TTYX.png"
 
 [[CURRENCIES]]
@@ -39,7 +41,20 @@ display_decimals=7
 is_asset_anchored=false
 anchor_asset_type="fiat"
 anchor_asset="KRW"
-redemption_instructions="Redeemable through the KRW/yUSDC trading pair on the SDEX."
+redemption_instructions="Redeemable through the KRWC/yUSDC trading pair on the SDEX."
 name="KRW Coin"
-desc="KRW is a mirror representation of the South Korean Won on the Stellar network. Using the Stellar DEX we keep KRWC pegged to the same value as the current market rates of real world KRW & USD. KRWC allows users of Stellar to hold a representation on the South Korean Won within the ecosystem. Each token is backed by a USD reserve, which is verifiable by viewing our distribution wallet on the network. We ensure to always have enough USD in reserve to buy back all issued KRWC through the SDEX. A minimum spread of 1% is set by the distribution wallet on buy & sell offers, with offers updated regularly to reflect other market prices. Visit us at https://stellaranchor.uk"
+desc="KRW is a mirror representation of the South Korean Won on the Stellar network. Using the Stellar DEX, we keep KRWC pegged to the same value as the current market rates of real world KRW & USD. KRWC allows users of Stellar to hold a representation on the South Korean Won within the ecosystem. Each token is backed by a USD reserve, which is verifiable by viewing our distribution wallet on the network. We ensure to always have enough USD in reserve to buy back all issued KRWC through the SDEX. A minimum spread of 1% is set by the distribution wallet on buy & sell offers, with offers updated regularly to reflect other market prices. Visit us at https://stellaranchor.uk"
 image="https://stellaranchoruk.xyz/images/tokens/KRWC.png"
+
+[[CURRENCIES]]
+code="EURC"
+issuer="GAP2JFYUBSSY65FIFUN3NTUKP6MQQ52QETQEBDM25PFMQE2EEN2EEURC"
+status="live"
+display_decimals=7
+is_asset_anchored=false
+anchor_asset_type="fiat"
+anchor_asset="EUR"
+redemption_instructions="Redeemable through the EURC/yUSDC trading pair on the SDEX."
+name="EUR Coin"
+desc="EUR is a mirror representation of the Euro on the Stellar network. Using the Stellar DEX, we keep EURC pegged to the same value as the current market rates of real world EUR & USD. EURC allows users of Stellar to hold a representation on the Euro within the ecosystem. Each token is backed by a USD reserve, which is verifiable by viewing our distribution wallet on the network. We ensure to always have enough USD in reserve to buy back all issued EURC through the SDEX. A minimum spread of 1% is set by the distribution wallet on buy & sell offers, with offers updated regularly to reflect other market prices. Visit us at https://stellaranchor.uk"
+image="https://stellaranchoruk.xyz/images/tokens/EURC.png"
