--- a/.well-known/stellar.toml
+++ b/.well-known/stellar.toml
@@ -12,7 +12,7 @@ ACCOUNTS=[
 [DOCUMENTATION]
 ORG_NAME="Stellar Anchor UK"
 ORG_DBA="Stellar Anchor UK"
-ORG_URL="https://stellaranchor.uk"
+ORG_URL="https://stellaranchoruk.xyz"
 ORG_LOGO="https://i.imgur.com/vX2TTYX.png"
 ORG_OFFICIAL_EMAIL="gbpcstellar@gmail.com"
 ORG_TWITTER="https://twitter.com/StellarAnchorUK"
@@ -30,7 +30,7 @@ anchor_asset_type="fiat"
 anchor_asset="GBP"
 redemption_instructions="Redeemable through the GBPC/USDC trading pair on the SDEX."
 name="GBP Coin"
-desc="GBPC is a mirror representation of the Great British Pound on the Stellar network. Using the Stellar DEX, we keep GBPC pegged to the same value as the current market rates of real world GBP & USD. GBPC allows users of Stellar to hold a representation on the Great British Pound within the ecosystem. Each token is backed by a USD reserve, which is verifiable by viewing our distribution wallet on the network. We ensure to always have enough USD in reserve to buy back all issued GBPC through the SDEX. A minimum spread of 1% is set by the distribution wallet on buy & sell offers, with offers updated regularly to reflect other market prices. Visit us at https://stellaranchor.uk"
+desc="GBPC is a mirror representation of the Great British Pound on the Stellar network. Using the Stellar DEX, we keep GBPC pegged to the same value as the current market rates of real world GBP & USD. GBPC allows users of Stellar to hold a representation on the Great British Pound within the ecosystem. Each token is backed by a USD reserve, which is verifiable by viewing our distribution wallet on the network. We ensure to always have enough USD in reserve to buy back all issued GBPC through the SDEX. A minimum spread of 1% is set by the distribution wallet on buy & sell offers, with offers updated regularly to reflect other market prices. Visit us at https://stellaranchoruk.xyz"
 image="https://i.imgur.com/vX2TTYX.png"
 
 [[CURRENCIES]]
@@ -43,7 +43,7 @@ anchor_asset_type="fiat"
 anchor_asset="KRW"
 redemption_instructions="Redeemable through the KRWC/yUSDC trading pair on the SDEX."
 name="KRW Coin"
-desc="KRW is a mirror representation of the South Korean Won on the Stellar network. Using the Stellar DEX, we keep KRWC pegged to the same value as the current market rates of real world KRW & USD. KRWC allows users of Stellar to hold a representation on the South Korean Won within the ecosystem. Each token is backed by a USD reserve, which is verifiable by viewing our distribution wallet on the network. We ensure to always have enough USD in reserve to buy back all issued KRWC through the SDEX. A minimum spread of 1% is set by the distribution wallet on buy & sell offers, with offers updated regularly to reflect other market prices. Visit us at https://stellaranchor.uk"
+desc="KRW is a mirror representation of the South Korean Won on the Stellar network. Using the Stellar DEX, we keep KRWC pegged to the same value as the current market rates of real world KRW & USD. KRWC allows users of Stellar to hold a representation on the South Korean Won within the ecosystem. Each token is backed by a USD reserve, which is verifiable by viewing our distribution wallet on the network. We ensure to always have enough USD in reserve to buy back all issued KRWC through the SDEX. A minimum spread of 1% is set by the distribution wallet on buy & sell offers, with offers updated regularly to reflect other market prices. Visit us at https://stellaranchoruk.xyz"
 image="https://stellaranchoruk.xyz/images/tokens/KRWC.png"
 
 [[CURRENCIES]]
@@ -56,5 +56,5 @@ anchor_asset_type="fiat"
 anchor_asset="EUR"
 redemption_instructions="Redeemable through the EURC/yUSDC trading pair on the SDEX."
 name="EUR Coin"
-desc="EUR is a mirror representation of the Euro on the Stellar network. Using the Stellar DEX, we keep EURC pegged to the same value as the current market rates of real world EUR & USD. EURC allows users of Stellar to hold a representation on the Euro within the ecosystem. Each token is backed by a USD reserve, which is verifiable by viewing our distribution wallet on the network. We ensure to always have enough USD in reserve to buy back all issued EURC through the SDEX. A minimum spread of 1% is set by the distribution wallet on buy & sell offers, with offers updated regularly to reflect other market prices. Visit us at https://stellaranchor.uk"
+desc="EUR is a mirror representation of the Euro on the Stellar network. Using the Stellar DEX, we keep EURC pegged to the same value as the current market rates of real world EUR & USD. EURC allows users of Stellar to hold a representation on the Euro within the ecosystem. Each token is backed by a USD reserve, which is verifiable by viewing our distribution wallet on the network. We ensure to always have enough USD in reserve to buy back all issued EURC through the SDEX. A minimum spread of 1% is set by the distribution wallet on buy & sell offers, with offers updated regularly to reflect other market prices. Visit us at https://stellaranchoruk.xyz"
 image="https://stellaranchoruk.xyz/images/tokens/EURC.png"
