--- a/.well-known/stellar.toml
+++ b/.well-known/stellar.toml
@@ -29,7 +29,7 @@ is_asset_anchored=false
 anchor_asset_type="fiat"
 anchor_asset="GBP"
 redemption_instructions="Redeemable through the GBPC/USDC trading pair on the SDEX."
-name="GBP Coin"
+name="British Pound Mirror"
 desc="GBPC is a mirror representation of the Great British Pound on the Stellar network. Using the Stellar DEX, we keep GBPC pegged to the same value as the current market rates of real world GBP & USD. GBPC allows users of Stellar to hold a representation on the Great British Pound within the ecosystem. Each token is backed by a USDC reserve, which is verifiable by viewing our issuing wallet on the network. We ensure to always have enough USDC in reserve to buy back all issued GBPC through the SDEX. A minimum spread of 1.25% is set by the issuing wallet on buy & sell offers, with offers updated regularly to reflect other market prices. Visit us at https://mirrasets.com"
 image="https://mirrasets.com/images/tokens/GBPC.png"
 
@@ -42,7 +42,7 @@ is_asset_anchored=false
 anchor_asset_type="fiat"
 anchor_asset="KRW"
 redemption_instructions="Redeemable through the KRWC/yUSDC trading pair on the SDEX."
-name="KRW Coin"
+name="Korean Won Mirror"
 desc="KRWC is a mirror representation of the South Korean Won on the Stellar network. Using the Stellar DEX, we keep KRWC pegged to the same value as the current market rates of real world KRW & USD. KRWC allows users of Stellar to hold a representation on the South Korean Won within the ecosystem. Each token is backed by a USDC reserve, which is verifiable by viewing our issuing wallet on the network. We ensure to always have enough USDC in reserve to buy back all issued KRWC through the SDEX. A minimum spread of 1.25% is set by the issuing wallet on buy & sell offers, with offers updated regularly to reflect other market prices. Visit us at https://mirrasets.com"
 image="https://mirrasets.com/images/tokens/KRWC.png"
 
@@ -55,6 +55,6 @@ is_asset_anchored=false
 anchor_asset_type="fiat"
 anchor_asset="EUR"
 redemption_instructions="Redeemable through the EURC/yUSDC trading pair on the SDEX."
-name="EUR Coin"
+name="Euro Mirror"
 desc="EURC is a mirror representation of the Euro on the Stellar network. Using the Stellar DEX, we keep EURC pegged to the same value as the current market rates of real world EUR & USD. EURC allows users of Stellar to hold a representation on the Euro within the ecosystem. Each token is backed by a USDC reserve, which is verifiable by viewing our issuing wallet on the network. We ensure to always have enough USDC in reserve to buy back all issued EURC through the SDEX. A minimum spread of 1.25% is set by the issuing wallet on buy & sell offers, with offers updated regularly to reflect other market prices. Visit us at https://mirrasets.com"
 image="https://mirrasets.com/images/tokens/EURC.png"
