--- a/.well-known/stellar.toml
+++ b/.well-known/stellar.toml
@@ -18,7 +18,7 @@ ORG_OFFICIAL_EMAIL="support@mirrasets.com"
 ORG_TWITTER="https://twitter.com/mirrasets"
 ORG_DESCRIPTION="Mirrasets mirrors real world assets on the Stellar network. We currently provide the pegged stablecoins GBPC, KRWC, and EURC, allowing users of Stellar to hold a representation of the Great British Pound, South Korean Won, and the Euro within the ecosystem. Currently, holders of GBPC, KRWC, and EURC can exchange their tokens back to USDC through the Stellar DEX."
 [[PRINCIPALS]]
-email="gbpcstellar@gmail.com"
+email="support@mirrasets.com"
 
 [[CURRENCIES]]
 code="GBPC"
