--- a/.well-known/stellar.toml
+++ b/.well-known/stellar.toml
@@ -45,7 +45,7 @@ anchor_asset_type="crypto"
 anchor_asset="AQUA"
 redemption_instructions="Redeemable through the AQUAm25/AQUA trading pair on the SDEX."
 name="AQUAm25 Draw"
-desc="AQUAm25 is a weekly draw to win 100,000 AQUA. Every Sunday, one of the top 25 holders of AQUAm25 is selected at random to win 100,000 AQUA. To participate, all you need to do is be in the top 25 holders when the random draw takes place on Sunday's. AQUAm25 has to be in your wallet for us to see them and to be eligible. Deposits of AQUAm25 in lending protocols, AMMs, or other places can't be seen so do not count towards the draw. Visit us at https://mirrasets.com"
+desc="AQUAm25 is a weekly draw to win 100,000 AQUA. Every Sunday, one of the top 25 holders of AQUAm25 is selected at random to win 100,000 AQUA. To participate, all you need to do is be in the top 25 holders when the random draw takes place on a Sunday. AQUAm25 has to be in your wallet for us to see them and to be eligible. Deposits of AQUAm25 in lending protocols, AMMs, or other places can't be seen so do not count towards the draw. Visit us at https://mirrasets.com"
 image="https://mirrasets.com/images/tokens/AQUAm25.png"
 
 [[CURRENCIES]]
