--- a/.well-known/stellar.toml
+++ b/.well-known/stellar.toml
@@ -17,7 +17,8 @@ ORG_DBA="Mirrasets"
 ORG_URL="https://mirrasets.com"
 ORG_LOGO="https://mirrasets.com/images/mirrasets_logo.png"
 ORG_OFFICIAL_EMAIL="support@mirrasets.com"
-ORG_TWITTER="https://twitter.com/mirrasets"
+ORG_TWITTER="https://x.com/mirrasets"
+ORG_DISCORD="https://discord.gg/DjBhVqmwup"
 ORG_DESCRIPTION="Mirrasets mirrors real world assets on the Stellar network. We currently provide the mirrorcoins GBPC, KRWC, EURC, and USDC, allowing users of Stellar to hold a representation of the Great British Pound, South Korean Won, Euro and the US Dollar within the ecosystem. Currently, holders of GBPC, KRWC, EURC and USDC can exchange their tokens back to USDC through the Stellar DEX."
 [[PRINCIPALS]]
 email="support@mirrasets.com"
